# careercoach-plugin

./: .gitignore  CREDITS.md  LICENSE  README.md  SOUL.md  __init__.py  jobsource.py  packet.py  protoagent.plugin.yaml  pyproject.toml  requirements-dev.txt  rubric.py  state.py  watch.py
.github/workflows/: ci.yml
skills/career-strategy/: SKILL.md
skills/interview-coach/: SKILL.md
skills/job-application-assistant/: SKILL.md  cover-letter-guide.md  cv-guide.md  job-evaluation.md  writing-style.md
skills/role-packet/: SKILL.md  ats-skills-entry.md  evidence-map.md  qa-review.md  recruiter-brief.md
skills/upskill/: SKILL.md
templates/: README.md
templates/Agent/: experience-reviewer.md  story-bank.md
templates/Resume/: Experience.md
templates/Skills/Humanize/: SKILL.md
templates/workflow-audit/: improvements.md
tests/: conftest.py  test_careercoach.py
workflows/: apply.yaml
