[project]
name = "careercoach"
version = "0.2.0"            # keep in lockstep with protoagent.plugin.yaml
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# asyncio_mode = "auto"     # uncomment with pytest-asyncio for async tests

[tool.ruff]
line-length = 120
target-version = "py311"
